--- a/ansible/roles/web/templates/sites.conf.j2
+++ b/ansible/roles/web/templates/sites.conf.j2
@@ -7,23 +7,25 @@ server {
     access_log /var/log/nginx/sites/{{ item }}_access.log;
     error_log /var/log/nginx/sites/{{ item }}_error.log;
 
-    location / {
-        try_files $uri $uri/ =404;
-    }
+    return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl;
-    server_name {{ domain }};
-
-    ssl_certificate /etc/ssl/certs/{{ domain }}.crt;
-    ssl_certificate_key /etc/ssl/private/{{ domain }}.key;
+    listen 443 ssl http2;
+    server_name {{ item }};
+    
+    ssl_certificate /etc/ssl/certs/{{ item }}.crt;
+    ssl_certificate_key /etc/ssl/private/{{ item }}.key;
     include /etc/nginx/snippets/ssl_params.conf;
 
-    root /var/www/{{ domain.split('.')[0] }};
+    root /var/www/{{ item.split('.')[0] }};
     index index.html;
 
     location / {
         try_files $uri $uri/ =404;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
