--- a/ansible/roles/web/templates/default.conf.j2
+++ b/ansible/roles/web/templates/default.conf.j2
@@ -21,21 +21,21 @@ server {
     ssl_certificate_key /etc/ssl/private/selfsigned.key;
     include /etc/nginx/snippets/ssl_params.conf;
     
-    root /var/www/main;
+    root /var/www;
     index index.html;
     
     location / {
+        root /var/www/main;
         try_files $uri $uri/ =404;
     }
     
     location /site1/ {
-        alias /var/www/site1/;
+        root /var/www;
         try_files $uri $uri/ =404;
     }
     
     location /site2/ {
-        alias /var/www/site2/;
+        root /var/www;
         try_files $uri $uri/ =404;
     }
 }
-
