--- a/ansible/roles/web/templates/default.conf.j2
+++ b/ansible/roles/web/templates/default.conf.j2
@@ -38,4 +38,19 @@ server {
         root /var/www;
         try_files $uri $uri/ =404;
     }
+
+    location = /admin {
+        return 301 /admin/;
+    }
+
+    location /admin/ {
+        root /var/www;
+        allow {{ admin_network }};
+        allow 127.0.0.1;
+        deny all;
+        try_files $uri $uri/ =404;
+        
+        access_log /var/log/nginx/sites/admin_access.log;
+        error_log /var/log/nginx/sites/admin_error.log;
+    }
 }
